# voice-translate

./: .gitignore  LICENSE  README.md  main-vosk-argos-espeak.py  main-vosk-argos-tts.py  main-vosk-argos.py  main-vosk.py  pyproject.toml  requirements.txt
