[project]
name = "voice-translate"
version = "0.1.0"
description = "Example voice translation using Vosk and Argos Translate"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "argostranslate>=1.9.6",
    "playsound==1.2.2",
    "sounddevice>=0.5.2",
    "tts>=0.22.0",
    "vosk==0.3.44",
]

[project.optional-dependencies]
macos = ["pyobjc>=11.0"]
gobject = ["pycairo", "PyGObject"]
